5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4345/executions/1633_2926.log
== TEST (2019-04-02 18:13:02) 
-- CODE:
s:(3.50)
	a=(7.00)
	v= round(7+3.50)
	print(v)
-- ERROR:
File "XXXX", line 2
    a=(7.00)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:13:33) 
-- CODE:
s:(3.50)
a=(7.00)
v= print(round(7+3.50))

-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:13:42) 
-- CODE:
s:(3.50)
a=(7.00)
 print(round(7+3.50))

-- EXECUTION TIME:
0.155548
-- ERROR:
  File "/home/codebench/codes/1633/2926/main.py", line 1
    s:(3.50)
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:14:50) 
-- CODE:
s=(3.50)
a=(7.00)
 round(5*a+3*s)
print(round)
-- ERROR:
File "XXXX", line 3
    round(5*a+3*s)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:19) 
-- CODE:
s=(3.50)
a=(7.00)
 round(3.50*2+7.00*4)
print(round)
-- ERROR:
File "XXXX", line 3
    round(3.50*2+7.00*4)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:16:59) 
-- CODE:
s=4,80
a=3.00
round(5*s+6*a)
print(round)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    round(5*s+6*a)
TypeError: can only concatenate tuple (not "float") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:17:30) 
-- CODE:
s=int(4,80)
a=int(3.00)
round(5*s+6*a)
print(round)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=int(4,80)
ValueError: int() base must be >= 2 and <= 36, or 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:17:35) 
-- CODE:
s=int(4,80)
a=int(3.00)
round(5*s+6*a)
print(round)
-- EXECUTION TIME:
0.19733
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2926/main.py", line 1, in <module>
    s=int(4,80)
ValueError: int() base must be >= 2 and <= 36

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:27:53) 
-- CODE:
s=int(4,80)
a=int(3.00)
round(5*s+6*a)
print(round)
-- EXECUTION TIME:
0.218521
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2926/main.py", line 1, in <module>
    s=int(4,80)
ValueError: int() base must be >= 2 and <= 36

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
